# funcgeo

./: .gitignore  MANIFEST.in  README.md  TODO.txt  pyproject.toml
funcgeo/: _func.py  cnf.py  main.py  tkapp.py
funcgeo/tools/: replace.py  rmtan90.py
src/funcgeo/: cnf.py  fg.py  main.py
src/funcgeo/res/: c.txt  readme.md
src/funcgeo/tools/: readme.md  replace.py  rmtan90.py
