
[project]
name = 'funcgeo'
version = '1.0'
authors = [
    {name = 'litlighilit', email = 'litlighilit@foxmail.com'},
]
description = 'to plot functions by inputing mathematical expressings'

#dependencies = ['matplotlib']

readme = 'README.md'

license = {file = 'LICENSE'}
#text = 'License :: OSI Approved :: MIT License', 
classifiers = [
    'Topic :: Education :: Computer Aided Instruction (CAI)',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Medical Science Apps.',
    'Topic :: Scientific/Engineering :: Visualizatio',
    'Programming Language :: Python :: 3'
]
keywords  = ['plot','geometric','math']

[project.gui-scripts]
f-g = 'funcgeo.main:main'
